# reftools

./: .bandit.yaml  .gitignore  .readthedocs.yml  CHANGES.rst  CITATION.md  LICENSE.txt  MANIFEST.in  README.rst  azure-pipelines.yml  azure-templates.yml  conftest.py  defsetup.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci_workflows.yml  codeql-analysis.yml  open_actions.yml  predeps_workflow.yml  publish-to-pypi.yml
doc/: rtd-pip-requirements
doc/source/: conf.py  getphotpars.rst  index.rst  interpretdq.rst  mkimphttab.rst  parsedq.rst  pctetab.rst  synpysyncomp.rst
lib/reftools/: __init__.py  getphotpars.py  graphfile.py  graphtab.py  imphtcomp.py  interpretdq.py  makedxy.py  makesmall.py  mkimphttab.py  parsedq.py  pctetab.py  synpysyncomp.py  tdspysyn.py  test_small_dgeo.py  wtraxyutils.py
reftools/: __init__.py  getphotpars.py  graphfile.py  graphtab.py  imphtcomp.py  interpretdq.py  makedxy.py  makesmall.py  mkimphttab.py  pctetab.py  synpysyncomp.py  tdspysyn.py  test_small_dgeo.py  wtraxyutils.py
reftools/data/: dqflags_acs.txt
reftools/data/pctetab/: pctetab_column_scaling_130813.txt  pctetab_history.txt
reftools/src/: py_compute_value.c
reftools/tests/: test_get_phot_pars.py  test_imphtcomp.py  test_interpretdq.py  test_mkimphttab.py
reftools/tests/data/: acs_sbc_dev_imp.fits
src/: py_compute_value.c
test/: test_get_phot_pars.py  test_interpretdq.py  test_mkimphttab.py  test_parsedq.py
test/test_data/: test_acs_wfc1_dev_imp.fits  test_wfc1_dev_imp.fits
