[metadata]
name = reftools

# version is the *next* version to be release, with .dev at the end if it is not final
version = 1.6.4.dev

author = Warren Hack, Nadezhda Dencheva, Vicki Laidler, Matt Davis
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    stsci.tools 
    stsci.imagestats 
    stsci.ndimage 
    calcos 
    stwcs 
    pyfits 
    pysynphot 
    pywcs 
    numpy (>=1.5.1)

[files]
packages_root = lib
packages = 
    reftools

# package_data lists files relative to the package source directory
# (i.e. lib/reftools) not the directory where you are running setup.py
package_data =
    reftools = pars/* *.help LICENSE.txt
scripts =
    lib/reftools/tdspysyn

[extension=reftools._computephotpars]
sources =
    src/compute_value.c
    src/py_compute_value.c

[global]
commands = stsci.distutils.command.easier_install.easier_install
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

