[metadata]
name = reftools
description = HST reference files tools
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, calibration, hubble
author = Warren Hack, Nadezhda Dencheva, Vicki Laidler, Matt Davis, Megan Sosey, Pey Lian Lim, Mihai Cara
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.txt
url = https://github.com/spacetelescope/reftools
edit_on_github = False
github_project = spacetelescope/reftools
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy>=3
python_requires = >=3.6

[options.extras_require]
all =
    matplotlib
    scipy
    stsci.tools
    pysynphot
    calcos
test =
    pytest-astropy-header
    pysynphot
docs =
    sphinx

[options.package_data]
reftools = data/*.*, data/pctetab/*.*
reftools.tests = data/*.*

[options.entry_points]
console_scripts =
    tdspysyn = reftools.tdspysyn:main

[flake8]
max-line-length = 80

[tool:pytest]
minversion = 3.0
testpaths = "reftools" "doc"
norecursedirs = build doc/build reftools/src
astropy_header = true
xfail_strict = true

[coverage:run]
source = reftools
omit =
    conftest*
    reftools/tests/*
    reftools/version*
    reftools/data/*
    */conftest*
    */reftools/tests/*
    */reftools/version*
    */reftools/data/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
